# connect_two_ros_master

./: CMakeLists.txt  README.md  package.xml
sample/: README.md  master_side.launch  slave_side.launch
src/: connect_two_master.cpp
