<?xml version="1.0"?>
<package format="2">
  <name>connect_two_ros_master</name>
  <version>0.0.0</version>
  <description>The connect_two_ros_master package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>topic_tools</depend>

</package>
